# plank

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  FINDINGS.md  README.md  VERSIONING.md  WHATS-NEW.md  build.rs
.github/workflows/: ci.yml  promote.yml  release.yml
assets/star-history/: .star-history.sig
docs/: ARCHITECTURE.md  BTW-DESIGN.md  BTW-SUSPEND-DESIGN.md  CHECKPOINT-DESIGN.md  FEATURES.md  REMOTE-CONTROL-DESIGN.md  REMOTE-ENGINE-DESIGN.md  ROADMAP.md  SHARED-ENGINE-DESIGN.md  SYSTEM-PROMPT.md
docs/superpowers/plans/: 2026-07-23-web-search-tool.md
docs/superpowers/specs/: 2026-07-20-at-file-autocomplete-design.md  2026-07-23-web-search-tool-design.md
examples/: logo.rs
site/: index.html
src/: agents.rs  checkpoint.rs  compact.rs  complete.rs  config.rs  configform.rs  consent.rs  context.rs  download.rs  ds4engine.rs  ds4web.rs  dsml.rs  editor.rs  engine.rs  errlog.rs  ffi.rs  hooks.rs  host.rs  imagepaste.rs  interrupt.rs  lib.rs  logo.rs  main.rs  memory.rs  mpsc_queue.rs  names.rs  notify.rs  obscura_web.rs  remote.rs  render.rs  repro.rs  sandbox.rs  serve.rs  session.rs  settings.rs  singleton.rs  skills.rs  snapshot.rs  status.rs  statusbar.rs  (+12 more)
src/remote/: client.rs  control.rs  ds4_client.rs  mod.rs  proto.rs  provider.rs  web_client.html
src/resources/: tools_prompt_after_edit.txt
src/tools/: ask.rs  bash.rs  diff.rs  edit.rs  files.rs  mcp.rs  mod.rs  web.rs
tests/: c_parity.rs  provider_mock.rs  remote_ds4.rs  ui_remote.rs
tests/fixtures/: datetime_context.txt  dsml_reminder.txt  system_prompt_reminder.txt  tool_result_unknown.txt  tools_prompt.txt
