[package]
name = "plank"
version = "1.0.0"
edition = "2024"
authors = ["Enzo Lombardi <enzinol@gmail.com>"]
repository = "https://github.com/aovestdipaperino/plank"
description = "Rust port of the ds4 agent (macOS only)"
license = "MIT"
keywords = ["agent", "llm", "tui", "macos"]
categories = ["command-line-utilities"]
exclude = ["assets/*", "ds4-ref/*", "*.gguf", "ds4flash.gguf"]

[features]
# Image pasting (Cmd-V clipboard images, image file paths) is disabled until
# the model's handling of image-file references is understood; build with
# `--features images` to re-enable.
images = []

[dependencies]
libc = "0.2"
ratatui = "0.29"
ureq = "3"
logo-art = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
ratatui-markdown = { version = "0.3.6", features = ["highlight-lang-all"] }

[lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
