[package]
name = "plank"
version = "2.0.1"
edition = "2024"
authors = ["Enzo Lombardi <enzinol@gmail.com>"]
repository = "https://github.com/aovestdipaperino/plank"
description = "Rust port of the ds4 agent (macOS only)"
license = "MIT"
keywords = ["agent", "llm", "tui", "macos"]
categories = ["command-line-utilities"]
exclude = ["assets/*", "refs/ds4/*", "*.gguf", "ds4flash.gguf"]

[features]
# Image pasting (Cmd-V clipboard images, image file paths) is disabled until
# the model's handling of image-file references is understood; build with
# `--features images` to re-enable.
images = []

[dependencies]
libc = "0.2"
ratatui = "0.29"
unicode-width = "0.2"
ureq = "3"
logo-art = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
ratatui-markdown = { version = "0.3.6", features = ["highlight-lang-all"] }
# serde JSON is shared by the remote-control protocol (#25) and the
# remote-engine wire types (#26). The remote-control server uses tungstenite;
# the sync remote-engine client (flavor a) reuses the ureq client above.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.24"
nucleo-matcher = "0.3"

[lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
