[package]
name = "plank"
version = "2.5.1"
edition = "2024"
authors = ["Enzo Lombardi <enzinol@gmail.com>"]
repository = "https://github.com/aovestdipaperino/plank"
description = "Rust port of the ds4 agent (macOS only)"
license = "MIT"
keywords = ["agent", "llm", "tui", "macos"]
categories = ["command-line-utilities"]
exclude = ["assets/*", "refs/ds4/*", "refs/obscura/*", "*.gguf", "ds4flash.gguf"]

[features]
default = ["use_obscura"]
# Image pasting (Cmd-V clipboard images, image file paths) is disabled until
# the model's handling of image-file references is understood; build with
# `--features images` to re-enable.
images = []
# Key the system-prompt KV checkpoint by project directory
# (`sysprompt-<hash>.kv`) so per-project prompt inputs (AGENTS.md, local MCP
# config) don't invalidate other projects' snapshots. Off by default: the
# shared single `sysprompt.kv` is kept until the per-project scheme has more
# mileage.
per_project_kv = []
# Web tools (google_search / visit_page) fetch pages through the embedded
# obscura headless browser (refs/obscura submodule, statically linked — no
# external binary) instead of curl or the ds4 C engine's visible Chrome.
# Disable with `--no-default-features` when the submodule is absent.
use_obscura = ["dep:obscura", "dep:tokio"]

[dependencies]
libc = "0.2"
# unstable-rendered-line-info exposes Paragraph::line_count for exact
# wrapped-line counts, so scrollback can clamp to the true bottom (word-wrap
# produces more rows than a char-packing estimate).
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
unicode-width = "0.2"
ureq = "3"
logo-art = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
ratatui-markdown = { version = "0.3.6", features = ["highlight-lang-all"] }
# serde JSON is shared by the remote-control protocol (#25) and the
# remote-engine wire types (#26). The remote-control server uses tungstenite;
# the sync remote-engine client (flavor a) reuses the ureq client above.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.24"
nucleo-matcher = "0.3"
git2 = { version = "0.21.0", default-features = false }
similar = "3.1.1"
crt-off = "0.1"
# Embedded headless browser for the web tools (feature `use_obscura`); the
# path points into the refs/obscura git submodule so the browser is compiled
# into the plank binary rather than shipped separately.
obscura = { path = "refs/obscura/crates/obscura", optional = true }
# Minimal runtime to drive obscura's async API from plank's sync tool code.
tokio = { version = "1", features = ["rt"], optional = true }

[lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

[target.'cfg(target_os = "macos")'.dependencies]
# Native macOS notifications (NSUserNotification via an embedded ObjC helper,
# no external binary). `default-features = false` drops the crate's Linux-only
# zbus/dbus tree; the macOS `image_path` (content image) needs no feature.
notify-rust = { version = "4.18.0", default-features = false }
